fixed wrapping bug

--- a/google_code_in/spell_checker_interface/jsDw/style.css
+++ b/google_code_in/spell_checker_interface/jsDw/style.css
@@ -67,8 +67,8 @@ h1 {
     background-color: rgb(180,230,255);
     color: green;
     width: 16px;
-    display: inline-block;
     margin-left: 0;
+    position: absolute;
 }
 .spell_recomendations_item:hover {
     background-color: lightgray;
@@ -80,8 +80,8 @@ h1 {
     margin: 1px;
     padding: 1px;
     width: 78px;
+    height: 20px;
     background-color: yellow;
     overflow: hidden;
-    display: inline-block;
     margin-right: 0;
 }
